@@ -1,4 +1,4 @@
-MANIFEST for cm_tools, version t20020703
+MANIFEST for cm_tools, version t20020705
 --------------------------------------------------------------------------------
 MANIFEST                        this file
 COPYING                         copyright notice for CM_TOOLS
